languages/io-automaton-fe/src/test/resources/valid/correctness/AutomatonLoop.ioautomaton
package correctness;

automaton AutomatonLoop {

		input Integer in;
	  output Integer out;
	    
    state A;
    initial A;
    
    A / {out = 5};
    A / {out = 2*in};
    A / {out = in+1};
}