languages/io-automaton-fe/src/test/resources/invalid/ReactionAndActionDontFit.ioautomaton
package invalid;

automaton ReactionAndActionDontFit{
    input int i;    
    output int a;
    
    state A;   
    initial A;
    
    A / {a = false};
}